project initialization from template

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -23,9 +23,8 @@
 			"extensions": [
 				"ms-python.python",
 				"ms-python.vscode-pylance",
-				"hashicorp.terraform",
-				"shd101wyy.markdown-preview-enhanced",
-				"janisdd.vscode-edit-csv"
+				"ms-azuretools.vscode-docker",
+				"shd101wyy.markdown-preview-enhanced"
 			]
 		}
 	}
