--- a/data_structures_and_algorithms/Dockerfile
+++ b/data_structures_and_algorithms/Dockerfile
@@ -5,7 +5,7 @@ LABEL   deployable="true" \
                     It only includes nessecary items to run the application."
 
 # Set Working Directory
-ENV WORKDIR=/template-python
+ENV WORKDIR=/data-structures-and-algorithms
 WORKDIR ${WORKDIR}
 
 # Avoid warnings by switching to noninteractive
@@ -13,11 +13,13 @@ ENV DEBIAN_FRONTEND=noninteractive
 
 # Bring project files into container
 COPY ./poetry.lock ./pyproject.toml ${WORKDIR}/
-COPY ./snek_case ${WORKDIR}/snek_case
+COPY ./data_structures_and_algorithms ${WORKDIR}/data_structures_and_algorithms
 
 RUN cd $WORKDIR/ && poetry install --no-root --without=dev
 
 
 # ----- Container Command -----
 # exec commands do not run in shell by default (See: https://docs.docker.com/engine/reference/builder/#cmd)
-CMD ["/bin/bash", "-c", "poetry run uvicorn snek_case.main:app --host 0.0.0.0 --port 8008"]
+CMD ["/bin/bash", "-c", "poetry run uvicorn data_structures_and_algorithms.main:app --host 0.0.0.0 --port 8008"]
+
+
