--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,7 @@ jobs:
         context: ./
         file: ./.devcontainer/Dockerfile
         builder: ${{ steps.buildx.outputs.name }}
-        tags: ${{ secrets.DOCKER_HUB_ID }}/template-python:${{ github.sha }}
+        tags: ${{ secrets.DOCKER_HUB_ID }}/data-structures-and-algorithms:${{ github.sha }}
         cache-from: type=local,src=/tmp/.buildx-cache
         cache-to: type=local,dest=/tmp/.buildx-cache-new
         push: true
@@ -55,7 +55,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     container:
-      image: armck/template-python:${{ github.sha }}
+      image: armck/data-structures-and-algorithms:${{ github.sha }}
       credentials:
         username: ${{ secrets.DOCKER_HUB_ID }}
         password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
@@ -81,7 +81,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     container:
-      image: armck/template-python:${{ github.sha }}
+      image: armck/data-structures-and-algorithms:${{ github.sha }}
       credentials:
         username: ${{ secrets.DOCKER_HUB_ID }}
         password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
