--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,10 +1,10 @@
 {
-	"name": "template-python",
+	"name": "data-structures-and-algorithms",
 	"dockerComposeFile": [
 		"../docker-compose.yml"
 	],
 	"service": "dev-container",
-	"workspaceFolder": "/workspaces/template-python",
+	"workspaceFolder": "/workspaces/data-structures-and-algorithms",
 	"postCreateCommand": "cd $WORKSPACE && poetry install",
 	"customizations": {
 		"vscode": {
