--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,15 +9,15 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "3.9.5"
 
-[tool.poetry.dev-dependencies]
-pytest = "^7.0.1"
-flake8 = "^4.0.1"
-pep8-naming = "^0.12.1"
-black = "^22.1.0"
-mypy = "^0.931"
-isort = "^5.10.1"
+[tool.poetry.group.dev.dependencies]
+mypy = "^1.8.0"
+flake8 = "^7.0.0"
+black = "^24.2.0"
+isort = "^5.13.2"
+pytest = "^8.0.0"
+pep8-naming = "^0.13.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
