--- a/.github/workflows/wf-ci.yml
+++ b/.github/workflows/wf-ci.yml
@@ -36,11 +36,11 @@ jobs:
 
   lint:
     runs-on: ubuntu-latest
-    needs: container-build-and-push
+    needs: [setup-env, container-build-and-push]
     container:
       image: ${{ needs.container-build-and-push.outputs.container_image }}
       credentials:
-        username: ${{ secrets.DOCKER_HUB_ID }}
+        username: ${{ needs.setup-env.outputs.dockerhub_id }}
         password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
     steps:
@@ -62,11 +62,11 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
-    needs: container-build-and-push
+    needs: [setup-env, container-build-and-push]
     container:
       image: ${{ needs.container-build-and-push.outputs.container_image }}
       credentials:
-        username: ${{ secrets.DOCKER_HUB_ID }}
+        username: ${{ needs.setup-env.outputs.dockerhub_id }}
         password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
     steps:
