--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,35 +1,31 @@
-FROM armck/python:latest
+FROM armck/python:3.9.5
 
 LABEL   deployable="false" \
     decription="This is the development version of the WEF application container. \
     It includes the application and required development tools."
 
-# ----- Environment Setup -----
-
-# Set Workspace directory
 ARG WORKSPACE=/workspaces/data-structures-and-algorithms
 ENV WORKSPACE=${WORKSPACE}
 
-# Avoid warnings by switching to noninteractive
+# avoid warnings by switching to noninteractive
 ENV DEBIAN_FRONTEND=noninteractive
 
-# ----- Primary Installs -----
-# uses tmp install directory to keep from caching install downloads
 
 RUN mkdir /tmp/dockerinstall \
     && cd /tmp/dockerinstall \
-    # Installs
-    # Clean up
-    && apt-get autoremove -y \
-    && apt-get clean -y \
+    # install
+    && apt update && apt install -y \
+    wget \
+    # cleanup
+    && apt autoremove -y \
+    && apt clean -y \
     && rm -rf /var/lib/apt/lists/* \
     && rm -rf /tmp/dockerinstall
 
 COPY poetry.lock pyproject.toml ${WORKSPACE}/
 RUN cd $WORKSPACE && poetry install --no-root
 
-# ----- Workspace Prep -----
 WORKDIR ${WORKSPACE}
 
-# Switch back to dialog for any ad-hoc use of apt-get
+# switch back to dialog for any ad-hoc use of apt-get
 ENV DEBIAN_FRONTEND=dialog
