--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -17,14 +17,13 @@
 				}
 			},
 			"extensions": [
+				"ms-azuretools.vscode-docker",
+				"shd101wyy.markdown-preview-enhanced",
 				"github.vscode-github-actions",
-				"ms-python.black-formatter",
-				"ms-python.flake8",
-				"ms-python.isort",
-				"ms-python.mypy-type-checker",
 				"ms-python.python",
 				"ms-python.vscode-pylance",
-				"shd101wyy.markdown-preview-enhanced"
+				"charliermarsh.ruff",
+				"ms-python.mypy-type-checker"
 			]
 		}
 	}
