chore: mount host gitconfig in devcontainer and update rebuild workflow to remove volumes and images.

--- a/.devcontainer/docker-compose.yaml
+++ b/.devcontainer/docker-compose.yaml
@@ -5,4 +5,5 @@ services:
       context: ..
     volumes:
       - ..:/workspaces/data-structures-and-algorithms:cached
+      - ~/.gitconfig:/root/.gitconfig:ro
     command: /bin/sh -c "while sleep 1000; do :; done"
