--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -14,6 +14,24 @@
 						"path": "bash",
 						"icon": "terminal-bash"
 					}
+				},
+				"files.exclude": {
+					"**/.venv": true,
+					"**/.ruff_cache": true,
+					"**/.mypy_cache": true,
+					"**/__pycache__": true
+				},
+				"[python]": {
+					"editor.defaultFormatter": "charliermarsh.ruff",
+					"editor.formatOnSave": true,
+					"editor.codeActionsOnSave": {
+						"source.fixAll": "explicit",
+						"source.organizeImports": "explicit"
+					}
+				},
+				"[dockerfile]": {
+					"editor.defaultFormatter": "ms-azuretools.vscode-docker",
+					"editor.formatOnSave": false
 				}
 			},
 			"extensions": [
