--- a/.github/workflows/wf-ci.yml
+++ b/.github/workflows/wf-ci.yml
@@ -49,16 +49,20 @@ jobs:
 
     - name: Install dependencies
       run: |
-        poetry install
-        poetry show
+        uv sync
+        uv tree
 
-    - name: Lint with flake8
+    - name: Lint with ruff
       run: |
-        poetry run flake8
+        uv run ruff check .
 
-    - name: Link with mypy
+    - name: Format Check with ruff
       run: |
-        poetry run mypy .
+        uv run ruff format --check .
+
+    - name: Type Check with mypy
+      run: |
+        uv run mypy .
 
   test:
     runs-on: ubuntu-latest
@@ -75,9 +79,9 @@ jobs:
 
     - name: Install dependencies
       run: |
-        poetry install
-        poetry show
+        uv sync
+        uv tree
 
-    - name: Test with Pytest
+    - name: Test with pytest
       run: |
-        poetry run pytest
+        uv run pytest
